--- a/mywebsite.html
+++ b/mywebsite.html
@@ -4,23 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <title>Maya's Website</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Dancing+Script"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Staatliches"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Fira+Code"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Heebo"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Fira+Code" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet"/>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -49,10 +37,7 @@
         <div id="hpt">
           <div id="welcome">
             <div id="welcomeImg">
-              <img
-                src="./pictures/MyWebsiteDrawing1copy.png"
-                width="500px;"
-              /><span id="AboutMe"></span>
+              <img src="./pictures/MyWebsiteDrawing1copy.png" width="500px;"/><span id="AboutMe"></span>
             </div>
             <div id="welcomeText">
               <div id="welcomeTextOne">
@@ -87,7 +72,7 @@
         <div id="aboutme">
           <div class="amone">
             <img
-              src="./pictures/profilePic.jpg"
+              src="./pictures/profile_pic.jpg"
               alt="Profile Picture"
               class="profilePic"
               width="400px;"
@@ -100,9 +85,7 @@
               <li class="abbullet">
                 <b>Education:</b> Loyola Marymount University in Los Angeles
               </li>
-              <li class="abbullet">
-                <b>Expected Graduation Date:</b> May 2021
-              </li>
+              <li class="abbullet"><b>Actual Graduation Date:</b> May 2021</li>
               <li class="abbullet"><b>Major:</b> Computer Science</li>
               <li class="abbullet"><b>Minor:</b> Applied Mathematics</li>
               <li class="abbullet">
@@ -132,10 +115,7 @@
           <div class="skill">
             <h2 class="stitle">Skills</h2>
             <p id="demo">
-              At school I have covered Java extensively, and I am learning
-              various data structure and algorithm concepts. I am excited about
-              learning new web technologies on the side and continue growing my
-              developer skills.
+              At school I have covered Java extensively, and I am learning various data structure and algorithm concepts. I am excited about learning new web technologies on the side and continue growing my developer skills.
             </p>
           </div>
           <div class="skill2">
@@ -235,7 +215,8 @@
                     >MovieFinder App</a
                   >
                 </p>
-                <p class="projtext">MovieFinder is an iOS app I created in my Interaction Design class at LMU. For this project, I used Swift and Xcode to design the app, and used three API calls to gather information. Click the title above to check out and learn more about the app.<br/><br/><br/><br/></p>
+                <p class="projtext">MovieFinder is an iOS app I created in my Interaction Design class at LMU. For this project, I used Swift and Xcode to design the app, and used three API calls to gather information. Click the title above to check out and learn more about the app.<br /><br />
+                </p>
                 <hr class="line" />
                 <span class="projskill">Swift</span
                 ><span class="projskill">Xcode</span
@@ -251,11 +232,12 @@
                     >Hyper!</a
                   >
                 </p>
-                <p class="projtext">Hyper! is an exhilarating and quirky programming language designed for those who want to express their limitless amount of energy. I collaborated with two other LMU students to devise a language that employs speech-like syntax for an easier, more natural experience. Click here to vist Hyper!'s website --> <a href="https://breelynbetts.github.io/HYPER" target="_blank" class="projlinkTwo">WEBSITE!</a><br/><br/></p>
+                <p class="projtext">Hyper! is an exhilarating and quirky programming language designed for those who want to express their limitless amount of energy. I collaborated with two other LMU students to devise a language that employs speech-like syntax for an easier, more natural experience. Click here to vist Hyper!'s website --> <a href="https://breelynbetts.github.io/HYPER" target="_blank" class="projlinkTwo">WEBSITE!</a>
+                </p>
                 <hr class="line" />
                 <span class="projskill">Ohm</span
                 ><span class="projskill">Javascript</span
-                ><span class="projskill">Hyper!</span><br />
+                ><span class="projskill">Hyper!</span>
               </li>
 
               <li class="proj">
@@ -267,13 +249,14 @@
                     >Hobyn</a
                   >
                 </p>
-                <p class="projtext"> Are you bored? Do you need a new hobby? Just use Hobyn! Hobyn is a website that matches a person to a hobby that is right for them. All you have to do is take the survey. In this project, I worked with two other students. My job was to work on the Google APIs, but I also contributed to some of the HTML and CSS. Click on the title to see the webpage.</p>
+                <p class="projtext">Are you bored? Do you need a new hobby? Just use Hobyn! Hobyn is a website that matches a person to a hobby that is right for them. All you have to do is take the survey. In this project, I worked with two other students. My job was to work on the Google APIs, but I also contributed to some of the HTML and CSS. Click on the title to see the webpage.
+                </p>
                 <hr class="line" />
                 <span class="projskill">CSS</span
                 ><span class="projskill">HTML</span
                 ><span class="projskill">JavaScript</span
                 ><span class="projskill">GitHub</span
-                ><span class="projskill">Google App Engine</span><br />
+                ><span class="projskill">Google App Engine</span>
               </li>
 
               <li class="proj">
@@ -285,8 +268,8 @@
                     >Baker's Workshop</a
                   >
                 </p>
-                <p class="projtext"> Speaking of hobbies, one of my favorite hobbies is baking. So, I made this webpage as a project to show you. On this webpage, you will find drop-downs of different kinds of pastries. Each drop-down includes some pictures of things I have baked, a short description of that pastry, a baking tip, and a fun fact. Click on the title to see the webpage.</p>
-                <hr class="line" />
+                <p class="projtext">Speaking of hobbies, one of my favorite hobbies is baking. So, I made this webpage as a project to show you. On this webpage, you will find drop-downs of different kinds of pastries. Each drop-down includes some pictures of things I have baked, a short description of that pastry, a baking tip, and a fun fact. Click on the title to see the webpage.
+                </p><hr class="line" />
                 <span class="projskill">CSS</span
                 ><span class="projskill">HTML</span
                 ><span class="projskill">JavaScript</span>
@@ -301,7 +284,8 @@
                     >Art Portfolio</a
                   >
                 </p>
-                <p class="projtext">This link will take you to a website filled with pictures of my artwork. I created these pieces in the art classes I took at LMU. And, yes, drawing is another one of my hobbies. However, in this portfolio, you will see different mediums of art, such as drypoint and collagraph. Click on the title to see the webpage.<br/><br/></p>
+                <p class="projtext">This link will take you to a website filled with pictures of my artwork. I created these pieces in the art classes I took at LMU. And, yes, drawing is another one of my hobbies. However, in this portfolio, you will see different mediums of art, such as drypoint and collagraph. Click on the title to see the webpage.<br />
+                </p>
                 <hr class="line" />
                 <span class="projskill">CSS</span
                 ><span class="projskill">HTML</span
@@ -330,7 +314,7 @@
 
             <div class="socBlock">
               <a
-                href="mailto:mdahlke@lion.lmu.edu"
+                href="mailto:mdahlke123@gmail.com"
                 target="_blank"
                 class="socmedLink"
               >
@@ -360,7 +344,7 @@
 
             <div class="socBlock">
               <a
-                href="https://www.linkedin.com/in/maya-dahlke-155346145/"
+                href="https://www.linkedin.com/in/mayadahlke/"
                 target="_blank"
                 class="socmedLink"
               >
