--- a/mywebsite.html
+++ b/mywebsite.html
@@ -10,8 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Fira+Code" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Heebo" rel="stylesheet" />
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
   <link href="./styles/mywebsite.css" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
@@ -20,41 +19,45 @@
 
 <body>
   <div id="header">
-    <a href="#container" class="myName">
-      <h1 id="h1">Maya Dahlke</h1>
-    </a>
+    <div id="headerTextIcon">
+      <div></div>
+      <a href="#container" class="myName">
+        <h1 style="margin: 0.5rem;font-weight: 100;">Maya Dahlke</h1>
+      </a>
+      <i class="bi bi-list" id="hamburgerMenu" onclick="navDropdownMenu()"></i>
+      <div id="menuDropdown">
+        <a href="#aboutme" class="navItem">About Me</a>
+        <a href="#skills" class="navItem">Skills</a>
+        <a href="#projects" class="navItem">Projects</a>
+        <a href="#contactinfo" class="navItem">Contact Info</a>
+      </div>
+    </div>
     <div id="menu">
-      <a href="#aboutme">About Me</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#contactinfo">Contact Info</a>
+      <a href="#aboutme" class="navItem">About Me</a>
+      <a href="#skills" class="navItem">Skills</a>
+      <a href="#projects" class="navItem">Projects</a>
+      <a href="#contactinfo" class="navItem">Contact Info</a>
     </div>
   </div>
 
   <ul id="container">
     <li class="section">
       <div id="hpt">
-        <div id="welcome">
-          <div id="welcomeImg">
-            <img src="./pictures/MyWebsiteDrawing1copy.png" width="500px;" /><span id="AboutMe"></span>
+        <div id="welcomeImg">
+          <img src="./pictures/MyWebsiteDrawing1copy.png" id="myWebsiteDrawing" />
+        </div>
+        <div id="welcomeText">
+          <div id="welcomeTextOne">
+            Hello, and welcome to my webpage!
           </div>
-          <div id="welcomeText">
-            <div id="welcomeTextOne">
-              Hello, and welcome to my webpage!<br /><br />
-            </div>
-            <div class="welcomeTextTwo">
-              Scroll down to learn about me and my computer science skills.
-            </div>
+          <div class="welcomeTextTwo">
+            Scroll down to learn about me and my computer science skills.
           </div>
-          <div id="hptb">
-            <a href="#aboutme">
-              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-compact-down" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd"
-                  d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z" />
-              </svg>
-            </a>
-          </div>
+        </div>
+        <div id="hptb">
+          <a href="#aboutme">
+            <i class="bi bi-chevron-compact-down"></i>
+          </a>
         </div>
       </div>
     </li>
@@ -62,28 +65,27 @@
     <li class="section">
       <div id="aboutme">
         <div class="amone">
-          <img src="./pictures/profile_pic.jpg" alt="Profile Picture" class="profilePic" width="300px;" />
+          <img src="./pictures/profile_pic.jpg" alt="Profile Picture" class="profilePic" />
         </div>
         <div class="amtwo">
           <ul>
             <h2 class="abtitle">About Me</h2>
             <li class="abbullet"><b>From:</b> San Diego, California</li>
-            <li class="abbullet">
-              <b>Education:</b> Loyola Marymount University in Los Angeles
-            </li>
+            <li class="abbullet"><b>Education:</b> Loyola Marymount University in Los Angeles</li>
             <li class="abbullet"><b>Actual Graduation Date:</b> May 2021</li>
             <li class="abbullet"><b>Major:</b> Computer Science</li>
             <li class="abbullet"><b>Minor:</b> Applied Mathematics</li>
-            <li class="abbullet">
-              <b>Hobbies:</b> Coding, Drawing, Listening to music, Traveling,
-              and Baking
-            </li>
-            <br />
+            <li class="abbullet"><b>Hobbies:</b> Coding, Drawing, Listening to music, Traveling, and Baking</li>
           </ul>
           <div id="btn">
-            <a href="./resume.pdf" target="_blank" download="Maya Dahlke's Resume" class="resumedownload"><span>Download
-                Resume </span></a>
-            <a href="#contactinfo" class="contactmebtn"><span>Contact Me </span></a>
+            <a href="./resume.pdf" target="_blank" download="Maya Dahlke's Resume">
+              <i class="bi bi-download"></i>
+              <span>Download Resume</span>
+            </a>
+            <a href="#contactinfo">
+              <i class="bi bi-chat-right-text"></i>
+              <span>Contact Me</span>
+            </a>
           </div>
         </div>
       </div>
@@ -100,14 +102,9 @@
         <div class="skill2">
           <ul style="padding: 0px">
             <li class="skillbox">
-              <!-- <img src="./skillspics/files.png" width="40px;" style="padding-bottom: 20px;"/> -->
-              <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-file-earmark-text-fill" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd"
-                  d="M2 3a2 2 0 0 1 2-2h5.293a1 1 0 0 1 .707.293L13.707 5a1 1 0 0 1 .293.707V13a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3zm7 2V2l4 4h-3a1 1 0 0 1-1-1zM4.5 8a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7zM4 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5z" />
-              </svg>
+              <i class="bi bi-file-earmark-text" style="font-size: 2rem;"></i>
               <div class="skillboxText">
-                <p>GitHub</p>
+                <p>Git</p>
                 <p>Eclipse</p>
                 <p>Xcode</p>
                 <p>Google App Engine</p>
@@ -116,12 +113,7 @@
               </div>
             </li>
             <li class="skillbox">
-              <!-- <img src="./skillspics/gears.png" width="40px;" style="padding-bottom: 20px;"/> -->
-              <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-gear-fill" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd"
-                  d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 0 0-5.86 2.929 2.929 0 0 0 0 5.858z" />
-              </svg>
+              <i class="bi bi-gear" style="font-size: 2rem;"></i>
               <div class="skillboxText">
                 <p>Java</p>
                 <p>Python</p>
@@ -131,13 +123,7 @@
               </div>
             </li>
             <li class="skillbox">
-              <!-- <img src="./skillspics/paintbrush.png" width="30px;" style="padding-bottom: 20px;"/> -->
-              <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-brush" fill="currentColor"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M15.213 1.018a.572.572 0 0 1 .756.05.57.57 0 0 1 .057.746C15.085 3.082 12.044 7.107 9.6 9.55c-.71.71-1.42 1.243-1.952 1.596-.508.339-1.167.234-1.599-.197-.416-.416-.53-1.047-.212-1.543.346-.542.887-1.273 1.642-1.977 2.521-2.35 6.476-5.44 7.734-6.411z" />
-                <path d="M7 12a2 2 0 0 1-2 2c-1 0-2 0-3.5-.5s.5-1 1-1.5 1.395-2 2.5-2a2 2 0 0 1 2 2z" />
-              </svg>
+              <i class="bi bi-brush" style="font-size: 2rem;"></i>
               <div class="skillboxText">
                 <p>HTML</p>
                 <p>CSS</p>
@@ -192,7 +178,7 @@
 
             <li class="proj">
               <p class="projname">
-                <a href="https://hobyn-trbl.appspot.com/" target="_blank" class="projlink">Hobyn</a>
+                <a href="https://github.com/mdalhlke/hobyn" target="_blank" class="projlink">Hobyn</a>
               </p>
               <p class="projtext">Are you bored? Do you need a new hobby? Just use Hobyn! Hobyn is a website that matches a person to a hobby that is right for them. All you have to do is take the survey. In this project, I worked with two other students. My job was to work on the Google APIs, but I also contributed to some of the HTML and CSS. Click on the title to see the webpage.
               </p>
@@ -237,9 +223,7 @@
         <div id="contactbar">
           <div class="socBlock">
             <div class="soc" onclick="myFunction()">
-              <div class="socmed">
-                <img src="./socialmedia/callFav.png" />
-              </div>
+              <i class="bi bi-telephone" style="font-size: 2rem;"></i>
               <p class="contactText">Call Me</p>
             </div>
           </div>
@@ -247,9 +231,7 @@
           <div class="socBlock">
             <a href="mailto:mdahlke123@gmail.com" target="_blank" class="socmedLink">
               <div class="soc">
-                <div class="socmed">
-                  <img src="./socialmedia/emailFav.png" />
-                </div>
+                <i class="bi bi-envelope" style="font-size: 2rem;"></i>
                 <p class="contactText">E-mail</p>
               </div>
             </a>
@@ -258,10 +240,8 @@
           <div class="socBlock">
             <a href="https://github.com/mdalhlke" target="_blank" class="socmedLink">
               <div class="soc">
-                <div class="socmed">
-                  <img src="./socialmedia/githubFav.png" />
-                </div>
-                <p class="contactText">Git Hub</p>
+                <i class="bi bi-github" style="font-size: 2rem;"></i>
+                <p class="contactText">GitHub</p>
               </div>
             </a>
           </div>
@@ -269,9 +249,7 @@
           <div class="socBlock">
             <a href="https://www.linkedin.com/in/mayadahlke/" target="_blank" class="socmedLink">
               <div class="soc">
-                <div class="socmed">
-                  <img src="./socialmedia/linkedinFav.png" />
-                </div>
+                <i class="bi bi-linkedin" style="font-size: 2rem;"></i>
                 <p class="contactText">Linkedin</p>
               </div>
             </a>
@@ -280,9 +258,7 @@
           <div class="socBlock">
             <a href="https://www.facebook.com/maya.dahlke.9" target="_blank" class="socmedLink">
               <div class="soc">
-                <div class="socmed">
-                  <img src="./socialmedia/facebookFav.png" />
-                </div>
+                <i class="bi bi-facebook" style="font-size: 2rem;"></i>
                 <p class="contactText">Facebook</p>
               </div>
             </a>
