--- a/mywebsite.html
+++ b/mywebsite.html
@@ -93,7 +93,7 @@
             }
 
             .section {
-                padding: 0 20px;
+                padding: 0 40px;
             }
 
             .homeContainer {
@@ -118,7 +118,7 @@
 
             .aboutMeContents {
                 display: flex;
-                gap: 20px;
+                gap: 40px;
             }
 
             .boxContainerSkills {
@@ -235,7 +235,7 @@
             </div>
 
             <div id="aboutMe" class="aboutMeContainer section">
-                <h2>About Me</h2>
+                <h2 style="text-align: center;">About Me</h2>
                 <div class="aboutMeContents">
                     <img src="./pictures/profile_pic.jpg" 
                          alt="My profile picture."
@@ -277,9 +277,9 @@
             </div>
 
             <div id="skills" class="skillsContainer section">
-                <h2 style="margin-top: 40px;">Skills</h2>
+                <h2 style="margin-top: 40px; text-align: center;">Skills</h2>
                 <p>
-                    I am excited about learning new web technologies through work and on my own, so I will continue to 
+                    I am excited about learning new web technologies through work and on my own so I will continue to 
                     grow as a developer. During my time in school, I covered Java extensively and learned various data 
                     structure and algorithm concepts. Below, I have listed some of the skills I have acquired through my 
                     years at school and beyond.
@@ -316,7 +316,7 @@
             </div>
 
             <div id="projects" class="projectsContainer section">
-                <h2 style="margin-top: 40px;">Projects</h2>
+                <h2 style="margin-top: 40px; text-align: center;">Projects</h2>
                 <div class="boxContainerProjects">
                     <div class="boxProjects">
                         <div class="projectHeader">
