update html code for symbols

--- a/bakingPage/baking.html
+++ b/bakingPage/baking.html
@@ -71,7 +71,7 @@
                             but favorite cake to bake is Kladdkaka. Kladdkaka is a Swedish sticky chocolate cake that is typically 
                             served with fresh strawberries, powdered sugar, and/or vanilla ice cream. The recipe for this cake calls 
                             for sugar, eggs, flour, cocoa powder, butter, and vanilla. This is the link to my favorite recipe 
-                            → <a href="https://www.allrecipes.com/recipe/75135/swedish-sticky-chocolate-cake-kladdkaka/">Click Me!</a>
+                            &#8594; <a href="https://www.allrecipes.com/recipe/75135/swedish-sticky-chocolate-cake-kladdkaka/">Click Me!</a>
                             <br><br><u>Maya's Tip</u>: I like to add a pinch of salt to the recipe above to make it a tad less sweet.
                             <br><br><u>Fun fact</u>: January 27th is National Chocolate Cake Day.
                         </p> 
@@ -151,6 +151,6 @@
             </div>
         </div>
 
-      <footer>Maya Dahlke © 2018. All Rights Reserved.</footer></div>
+      <footer>Maya Dahlke &copy; 2018. All Rights Reserved.</footer></div>
     </body>
 </html>
