text improvements, add twenty one showcase

--- a/mywebsite.html
+++ b/mywebsite.html
@@ -125,7 +125,7 @@
                         <i class="bi bi-file-earmark-fill" style="font-size: 20px;"></i>
                         <span>Google Cloud Platform</span>
                         <span>Amazon Web Services</span>
-                        <span>JIRA</span>
+                        <span>JIRA (Agile Scrum)</span>
                         <span>Git</span>
                         <span>Eclipse</span>
                         <span>Xcode</span>
@@ -135,17 +135,16 @@
                         <span>Python</span>
                         <span>JavaScript</span>
                         <span>Java</span>
-                        <span>PostgreSQL</span>
+                        <span>SQL</span>
                         <span>C</span>
-                        <span>Assembly</span>
                     </div>
                     <div class="boxItem boxSkills">
                         <i class="bi bi-brush-fill" style="font-size: 20px;"></i>
                         <span>HTML</span>
                         <span>CSS</span>
-                        <span>Angular.JS</span>
-                        <span>React.JS</span>
-                        <span>D3.JS</span>
+                        <span>Angular.js</span>
+                        <span>React.js</span>
+                        <span>D3.js</span>
                         <span>Swift/SwiftUI</span>
                     </div>
                 </div>
@@ -154,13 +153,38 @@
             <div id="projects" class="projectsContainer section">
                 <h3 class="title">Projects</h3>
                 <p>
-                    Below is a list of the projects I have worked on, and the list is forever growing. These 
-                    projects are a mix of personal and academic projects done individually or with a group. Each 
-                    block includes a brief description and image of the project, and the technologies used. You can
-                    also click the title of the project, which will link you to it's GitHub repo or an external
-                    website that showcases the project.
+                    Here is a list of the projects I have worked on, and the list is forever growing. These projects 
+                    include a mix of personal and academic applications, completed either individually or collaboratively.
+                    Each block includes a brief description, an image, and the technologies used. You can also click the 
+                    title of the project, which will route you to it's GitHub repo or an external website that showcases the project.
+                    To view more projects see my <a href="https://github.com/mdalhlke/" class="menuLink projectTitle">GitHub page</a>.
                 </p>
                 <div class="boxContainerProjects">
+                    <div class="boxItem boxProjects">
+                        <div class="projectHeader">
+                            <img src="./pictures/twenty-one.png"
+                                alt="Twenty One View Image."
+                                height="205px"
+                                width="300px"
+                            >
+                            <div class="projectBody">
+                                <div class="projectText">
+                                    <a href="https://github.com/mdalhlke/twenty-one-game-react" class="menuLink projectTitle">Twenty One</a>
+                                    <p>
+                                        Twenty One is a personal project I created to practice my React skills. The goal of the game is a simple -
+                                        get as close to 21 as possible without going over. Click the title above to clone the repository and 
+                                        see the game in action. 
+                                    </p>
+                                </div>
+                                <div class="projectItems">
+                                    <span class="chip">React</span>
+                                    <span class="chip">Tailwind</span>
+                                    <span class="chip">npm</span>
+                                    <span class="chip">GitHub</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="boxItem boxProjects">
                         <div class="projectHeader">
                             <div class="projectImgs">
